--- a/SimCli/SimCli.csproj
+++ b/SimCli/SimCli.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Sim\CpuSim.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Akka" Version="1.4.10" />
+  </ItemGroup>
+
 </Project>
